# git-http-backend

./: .gitignore  Cargo.toml  README.md  app.ts  bundle.js  config.json  index.js.map  index.ts  layout.html  login.html  login.ts  package.json
src/: config.rs  lib.rs  server.rs
src/actix/: get_text_file.rs  git_receive_pack.rs  git_upload_pack.rs  handler.rs  mod.rs  objects_info_packs.rs  objects_pack.rs  refs.rs
static/: bundle.js  index.js  index.js.map
